# vulkan_learning

./: .gitignore  Cargo.toml
src/: engine.rs  logging.rs  main.rs
src/engine/: asset_system.rs  renderer.rs
src/engine/asset_system/: mesh.rs
src/engine/backend/: context.rs
src/engine/backend/context/: debug.rs  device.rs  shader.rs  surface.rs  swapchain.rs
src/engine/backend/shaders/: compile_shaders.bat  triangle.vert
src/engine/backend/shaders/spv/: triangle.vert.spv
src/engine/logs/: engine.log.2022-11-28
src/engine/renderer/: context.rs  resources.rs
src/engine/renderer/context/: command.rs  debug.rs  depth.rs  device.rs  instance.rs  pipeline.rs  shader.rs  surface.rs  swapchain.rs
src/engine/renderer/resources/: buffer.rs  image.rs
src/engine/renderer/shaders/: mesh.vert
src/engine/renderer/shaders/spv/: mesh.vert.spv
src/engine/utils/: cstring.rs  mod.rs  profiling.rs  validation.rs
