[package]
name = "vulkan_learning"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { git = "https://github.com/ash-rs/ash" }
ash-window = { git = "https://github.com/ash-rs/ash" }
winit = "0.27.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "smallvec",
    "env-filter",
    "time",
] }
tracing-unwrap = { version = "0.10.0", default-features = false, features = [
    "log-location",
] }
tracing-appender = "0.2"
time = { version = "0.3.9", features = [
    "local-offset",
    "macros",
    "formatting",
] }

[features]
default = ["tracing/max_level_debug", "validation"]
validation = []
shipping = ["tracing/release_max_level_error"]

[profile.release]
lto = true
codegen-units = 1
