[package]
name = "vulkan_learning"
version = "0.1.0"
edition = "2021"

[dependencies]
# Vulkan
ash = { git = "https://github.com/ash-rs/ash" }
ash-window = { git = "https://github.com/ash-rs/ash" }
vma = { package = "vk-mem-alloc", git = "https://github.com/Jerrody/vk-mem-alloc-rs" }

# Windowing
winit = "0.27.5"
raw-window-handle = "0.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "smallvec",
    "env-filter",
    "time",
] }
tracing-unwrap = { version = "0.10.0", default-features = false, features = [
    "log-location",
] }
tracing-appender = "0.2"
time = { version = "0.3.9", features = [
    "local-offset",
    "macros",
    "formatting",
] }
tracing-tracy = "0.10.1"

# Filesystem
walkdir = "2.3.2"

# Concurrency
rayon = "1.6.0"

# Math
math = { package = "nalgebra-glm", version = "0.17.0" }

# Error handaling
track = { package = "anyhow_track", git = "https://github.com/Jerrody/anyhow_cascade" }

# Loadding meshes
tobj = "3.2.3"

# Memory
mimalloc = "0.1.32"
memoffset = "0.8.0"

# Misc
smallvec = "1.10.0"

[features]
default = ["tracing/max_level_debug", "validation"]
shipping = ["tracing/release_max_level_error"]
validation = []
profiling = []

[profile.release]
lto = true
codegen-units = 1
